--- a/nablaweb/templates/nabladet/nablad_list.html
+++ b/nablaweb/templates/nabladet/nablad_list.html
@@ -4,7 +4,14 @@
 {% block title %}Nabladet{% endblock %}
 
 {% block content %}
-{% if news_list %} wtf {% endif %}
+
+<h2>Nabladet</h2>
+<p>Nabladet er vårt kjøre tidsskrift, som blir publisert av redaksjonen flere ganger i semesteret.</p>
+
+{% if not nablad_list %}
+    <p>Ingen Nablad har blitt lagt til enda.</p>
+{% endif %}
+
 {% for nablad in nablad_list %}
     <div class="row">
         <div class="span8">
@@ -15,4 +22,5 @@
     </div>
     <hr>
 {% endfor %}
+
 {% endblock content %}
