--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -20,6 +20,9 @@
         </div>
     </div>
     <hr>
+{% empty %}
+    <h2>Velkommen</h2>
+    <p>Du er havnet på linjeforeningen Nabla sin hjemmeside. Her vises det vanligvis nyheter, men ingen er lagt til enda.</p>
 {% endfor %}
 
 
