--- a/nablaweb/templates/quotes/quote_list.html
+++ b/nablaweb/templates/quotes/quote_list.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% load markup %}
 
-{% block title %}Sitater{% endblock %}
-
+{% block title %}Gullkorn{% endblock %}
+<h2>Gullkort</h2>
+<p>Her finner du en liste over artige sitat som er blitt ytret av personer med tilknytning til NTNU eller Nabla.</p>
+<hr>
 {% block content %}
 {% for quote in quote_list %}
     <div class="row">
@@ -12,5 +14,7 @@
         </div>
     </div>
     <hr>
+{% empty %}
+    <p>Men ingen sitater er lagt til enda.</p>
 {% endfor %}
 {% endblock content %}
