--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -45,7 +45,7 @@
 <div class="navbar-inner">
 
     <!-- navbar container -->
-    <div class="container" style="width: 100%;">
+    <div class="container">
 
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
@@ -54,7 +54,7 @@
         </a>
 
         <a class="brand" href="/?">
-            <img src="{{ STATIC_URL }}img/nabla-white.svg" alt="">
+            <img src="{{ STATIC_URL }}img/nabla-black.svg" alt="">
             Nabla
         </a>
 
@@ -104,7 +104,7 @@
                     <a href="#bruker"
                         class="dropdown-toggle no-ajaxy"
                         data-toggle="dropdown">
-                        <span class="icon-white icon-user"></span> {{ user.username }}
+                        <span class="icon-user"></span> {{ user.username }}
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
