--- a/nablaweb/templates/jobs/jobs_list.html
+++ b/nablaweb/templates/jobs/jobs_list.html
@@ -8,7 +8,9 @@
     {% for job in jobs_list %}
         <div class="row">
             <div class="span8">
-                <h2>{{ job.headline }} i {{ job.company.name }}</h2>
+                <h2>{{ job.headline }}</h2>
+                <p><strong><a href="{% url jobs_company_list job.company.name %}">{{ job.company.name }}</a> | </strong>Søknadsfrist<strong> {{ job.deadline_date }}
+                </strong><br/><strong>Relevant for {{ job.relevant_for_group.all|join:", " }}, årskull {{ job.relevant_for_year.all|join:", " }}</strong></p>
                 {{ job.lead_paragraph|markdown }}
                 <p><a class="btn" href="{% url jobs_detail job.id %}">Les mer &raquo;</a></p>
             </div>
