La til LocalSettings.php-fil og extension for wikien slik at felles login virker med Django, slik den gjoer paa devel naa. Slettet ogsaa wikidj-appen siden den naa er ubrukelig.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -65,6 +65,7 @@
                 <li><a href="/?">Hjem</a></li>
                 <li><a href="{% url event_list %}">Arrangement</a></li>
                 <li><a href="{% url jobs_list %}">Karriere</a></li>
+                <li><a href="/wiki">Wiki</a></li>
 
                 <li class="dropdown">
                     <a href="#komiteer"
