Lagt til beskjærbare bilder og thumbnails.

--- a/nablaweb/templates/events/event_detail.html
+++ b/nablaweb/templates/events/event_detail.html
@@ -2,6 +2,7 @@
 {% load markup %}
 {% load humanize %}
 {% load comments %}
+{% load thumbnail %}
 
 {% block title %}{{ event.headline }}{% endblock %}
 
@@ -10,7 +11,7 @@
 <div class="row"><div class="span8">
 
     {% if event.picture %}
-        <img class="header_picture" alt="" src="{{ event.picture.url }}" width="620">
+        <img alt="" width="100%" src="{% thumbnail event.picture 770x250 box=event.cropping %}">
     {% endif %}
 
 <h2>{{ event.headline }}</h2>
