--- a/nablaweb/templates/accounts/view_member_profile.html
+++ b/nablaweb/templates/accounts/view_member_profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load avatar_tags %}
 {% load markup %}
+{% load mediawiki_links %}
 
 {% block title %}Medlem: {{member.get_full_name }} {% endblock %}
 
@@ -56,6 +57,6 @@
 
 </div>
 
-<div id="user_about">{{ member.get_profile.about|markdown }}</div>
+<div id="user_about">{{ member.get_profile.about|markdown|wikilinks}}</div>
 
 {% endblock %}
