--- a/nablaweb/templates/comments/preview.html
+++ b/nablaweb/templates/comments/preview.html
@@ -1,5 +1,6 @@
 {% extends "comments/base.html" %}
 {% load i18n %}
+{% load mediawiki_links %}
 
 {% block title %}{% trans "Preview your comment" %}{% endblock %}
 
@@ -29,7 +30,7 @@
                     </div>
                     {% load markup %}
                     {# Urlize er en extension som gjør linker klikkbare. Failer silently #}
-                    {{ form.data.comment|markdown:"safe,urlize" }}
+                    {{ form.data.comment|markdown:"safe,urlize"|wikilinks }}
 
                 </div>
 
