--- a/nablaweb/templates/flatpages/default.html
+++ b/nablaweb/templates/flatpages/default.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
+{% load mediawiki_links %}
 {% load bbcode %}
+{% load markup %}
+
 {% block title %}
     {{ block.super }} - {{ flatpage.title }}
 {% endblock %}
 
 {% block content %}
     <h2>{{ flatpage.title }}</h2>
-    {{ flatpage.content }}
+    {{ flatpage.content|markdown|wikilinks}}
 {% endblock %}
