--- a/nablaweb/templates/news/news_detail.html
+++ b/nablaweb/templates/news/news_detail.html
@@ -2,6 +2,7 @@
 {% load markup %}
 {% load humanize %}
 {% load comments %}
+{% load mediawiki_links %}
 
 {% block content %}
 
@@ -10,8 +11,8 @@
 {% endif %}
 
 <h2>{{ news.headline }}</h2>
-{{ news.lead_paragraph|markdown }}
-{{ news.body|markdown }}
+{{ news.lead_paragraph|markdown|wikilinks}}
+{{ news.body|markdown|wikilinks}}
 
 {# Comments #}
     {% get_comment_count for news as comment_count %}
