Lagt til en {% block below_ad %}{% endblock %}

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -202,12 +202,16 @@
 
             {% endblock sidebar %}
 
+            <div>
             {% block ad %}
             <!-- reklame -->
             <img src="http://lorempixel.com/300/250/technics/1/Reklame" alt="Reklame">
             <!-- end reklame -->
+            </div>
 
             {% endblock ad %}
+
+            {% block below_ad %}{% endblock %}
 
         </div>
         <!-- end sidebar -->
