--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -6,19 +6,19 @@
 <head>
     <meta charset="utf-8">
     <title>
-    Nabla: {% block title %}linjeforeningen for Fysikk og matematikk ved NTNU{% endblock title %}
+        Nabla: {% block title %}linjeforeningen for Fysikk og matematikk ved NTNU{% endblock title %}
     </title>
-    <meta name="description" content="Hjemmesiden til linjeforeningen Nabla, for studentene på fysikk og matematikk-masterprogrammet på NTNU.">
+    <meta name="description" 
+          content="Hjemmesiden til linjeforeningen Nabla, for studentene på 
+                   fysikk og matematikk-masterprogrammet på NTNU.">
     <meta name="author" content="Nabla">
-
-
 
     <!-- Styles -->
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet"><!-- Generated with LESS -->
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet"><!-- Generated with LESS -->
     <link href="{{ STATIC_URL }}css/default.css" rel="stylesheet"><!-- Site specific, except for variables -->
 
-    <!-- HTML5 shim, for IE6-8 support of HTML elements -->
+    <!-- HTML5 shim, for IE6-8 support for HTML elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -38,23 +38,22 @@
 
 <!-- Denne boksen gir hele siden hvit bakgrunn, for å imitere sticky footer -->
 <div id="whitebox" class="box-shadow">
+<div class="container"><!-- main container -->
 
-<!-- navbar and navbar-inner -->
-<div class="navbar">
+
+<header>
+    <a href="/"><img src="{{ STATIC_URL }}img/nabla_logo_black.svg" alt="Nabla"></a>
+</header>
+
+
+<nav class="navbar">
 <div class="navbar-inner">
-
-    <!-- navbar container -->
-    <div class="container">
+<div class="container" style="width: auto;">
 
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-        </a>
-
-        <a class="brand" href="/?">
-            <img src="{{ STATIC_URL }}img/nabla-black.svg" alt="">
-            Nabla
         </a>
 
         <div class="nav-collapse"><!-- blir gjemt ved små skjermstørrelser -->
@@ -127,9 +126,9 @@
                 {% csrf_token %}
                 <table>
                     <tr>
-                        <td><input class="span1" type="text" placeholder="Bruker" name="username" /></td>
-                        <td><input class="span1" type="password"  placeholder="Passord" name="password" /></td>
-                        <td><input class="submit" type="submit" value="Login" /></td>
+                        <td><input type="text" placeholder="Bruker" name="username" /></td>
+                        <td><input type="password"  placeholder="Passord" name="password" /></td>
+                        <td><input class="submit btn btn-info" type="submit" value="Login" /></td>
                     </tr>
                 </table>
             </form>
@@ -137,52 +136,47 @@
 
             {% endif %}
 
+        </div><!-- end nav-collapse-->
+        
+</div> <!-- end container -->
+</div> <!-- end navbar-inner -->
+</nav> <!-- end navbar -->
+
+
+
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{% if message.tags %}{{ message.tags}}{% endif %}">
+            {#<a class="close" data-dismiss="alert">×</a>#}
+            <b>Info:</b> {{ message }} 
         </div>
-        <!-- end nav-collapse-->
-
-    </div>
-    <!-- end navbar container -->
-        
-</div>
-</div>
-<!-- end navbar and navbar-inner -->
+    {% endfor %}
+{% endif %}
 
 
-<!-- main container -->
-<div class="container" id="mainblock">
+{% block main %}
 
+<div class="row"><!-- main row -->
+
+    <!-- content -->
+    <div class="span8">
+        {% block content %} 
+        {% endblock content %}  
+    </div> 
+    <!-- end content container -->
     
 
+    <aside class="span4"><!-- sidebar -->
 
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-{% if message.tags %}{{ message.tags}}{% endif %}">
-                {#<a class="close" data-dismiss="alert">×</a>#}
-                <b>Info:</b> {{ message }} 
-            </div>
-        {% endfor %}
-    {% endif %}
 
-    <!-- main row -->
-    {% block main %}
-    <div class="row">
+        {% block sidebar %}
 
-    
-        <!-- content -->
-        <div class="span8">
-            {% block content %} 
-            {% endblock content %}  
-        </div> 
-        <!-- end content container -->
-        
-        <!-- sidebar -->
-        <div class="span4">
-
-            {% block sidebar %}
+            <h3>Om Nabla</h3>
+            <p>Nabla er linjeforeningen for sivilingeniørprogrammet <b>Fysikk og matematikk</b> på NTNU. Du kan lese mer om studiet på <a href="http://www.ntnu.no/studier/mtfyma">NTNU sine nettsider</a>. På denne nettsiden finner du informasjon om studiet, linjeforeningen, og hva som foregår.</p>
 
             {% if upcoming_events %}
             <!-- kommende arrangement -->
-            <h2>Kommende arrangement</h2>
+            <h3>Kommende arrangement</h3>
             <div class="well" style="padding: 8px 0;">
                 <ul class="nav nav-list">
                     {% for event in upcoming_events %}
@@ -200,58 +194,49 @@
             <!-- end kommende arrangement -->
             {% endif %}
 
-            {% endblock sidebar %}
+        {% endblock sidebar %}
 
+
+        <!-- reklame -->
+        {% block ad %}
+            <div class="box">
             <div>
-            {% block ad %}
-            <!-- reklame -->
-            <img src="http://lorempixel.com/300/250/technics/1/Reklame" alt="Reklame">
-            <!-- end reklame -->
+                <img src="http://lorempixel.com/300/250/technics/1/Reklame" class="ad wide" alt="Reklame">
             </div>
+            </div>
+        {% endblock ad %}
 
-            {% endblock ad %}
 
-            {% block below_ad %}{% endblock %}
+        {% block below_ad %}
+        {% endblock %}
 
-        </div>
-        <!-- end sidebar -->
-        
-    </div>
-    {% endblock main %} 
-    <!-- end main row -->
 
-</div>
-<!-- end main container  -->
+    </aside><!-- end sidebar -->
+    
 
-</div>
-<!-- end whitebox -->
+
+</div><!-- end main row -->
+
+{% endblock main %} 
+
+
+</div><!-- end main container  -->
+</div><!-- end whitebox -->
+
 
 <footer>
+
     <div class="container">
     <div class="row">
     
         <!-- kontakt -->
         <div class="span4 kontakt">
             <h2>Kontakt</h2>
-            <table class="table table-condensed">
-                <tbody>
-                    <tr><td>Styret</td><td>nabla&nabla;nabla.no</td></tr>
-                    <tr><td>Bedriftskomiteen</td><td>bedkom&nabla;nabla.no</td></tr>
-                    <tr><td>Festkomiteen</td><td>festkom&nabla;nabla.no</td></tr>
-                    <tr><td>Kjellerstyre</td><td>nablakjelleren&nabla;nabla.no</td></tr>
-                    <tr><td>Arrkom</td><td>alumnikom&nabla;nabla.no</td></tr>
-                    <tr><td>Redaksjonen</td><td>nabladet&nabla;nabla.no</td></tr>
-                    <tr><td>Webkomiteen</td><td>webkom&nabla;nabla.no</td></tr>
-                </tbody>
-            </table>
-        </div>
-        <!-- end kontakt -->
-        
-        <!-- om nabla -->
-        <div class="span4">
-            <h2>Om Nabla</h2>
-            <p>Nabla er linjeforeningen for sivilingeniørprogrammet Fysikk og matematikk på NTNU. Du kan lese mer om studiet på <a href="http://www.ntnu.no/studier/mtfyma">NTNU sine nettsider</a></p>
-            <p><b>Postadresse:</b></p>
+
+            <p>Du kan nå oss på <a class="email" href="mailto:nabla@nabla.no">nabla&nabla;nabla.no</a></p>
+
+            <p>Bedrift? Kontakt oss på <a class="email" href="mailto:bedkom(at)nabla.ntnu.no">bedkom&nabla;nabla.no</a></p>
+
             <address>
                 Nabla <br>
                 NT-fakultetet <br>
@@ -259,6 +244,16 @@
                 N-7491 Trondheim <br>
                 Norway
             </address>
+        </div>
+        <!-- end kontakt -->
+        
+        <!-- om nabla -->
+        <div class="span4">
+            <h2>Funnet en feil?</h2>
+            <p>Den Nabla-nettsiden er fremdeles i sin barndom. Har du funnet en feil, eller noe som burde forbedres? <a href="https://bitbucket.org/andreros/nablaweb/issues/new">Kontakt webkom!</a></p>
+
+            <p>For andre henvendelser: <a class="email" href="mailto:webkom(at)nabla.ntnu.no">webkom&nabla;nabla.no</a></p>
+            
         </div>
         <!-- end om nabla -->
 
@@ -270,7 +265,7 @@
             new TWTR.Widget({
                 version: 2,
                 type: 'profile',
-                rpp: 4,
+                rpp: 3,
                 interval: 30000,
                 width: 'auto',
                 height: 300,
@@ -296,9 +291,11 @@
         <!-- end twitterbox -->
 
         
-    </div><!-- row -->
-    </div><!-- container -->
+    </div><!-- end row -->
+    </div><!-- end container -->
 </footer>
+
+
 
 <!-- Scripts are loaded at the bottom to improve page loading speed.
      TODO: Make a build script that combines and compresses them -->
@@ -312,9 +309,8 @@
 {# Skaper krøll med Django Toolbar #} 
 <!--<script src="{{ STATIC_URL }}js/jquery.history.js"></script>-->
 
-<!-- Enable parsing TeX. -->
-<script type="text/x-mathjax-config">
 
+<script type="text/x-mathjax-config">
 // Differences from standard config:
 //  - $tex$ is allowed.
 //  - LaTeX inside <code> tags now works.
