--- a/nablaweb/templates/homepage/homepage_start.html
+++ b/nablaweb/templates/homepage/homepage_start.html
@@ -1,26 +1,46 @@
 {% extends "base.html" %}
 {% load classname %}
 
-
-{% block title %}{{ block.super }}{% endblock %}
-
-
 {% block content %}
 
-{% include "content/content_list.html" with ajax="True" %}
+{% for content in content_list %}
+    
+    {% include "content/content_list.html" %}
 
-{% comment %}
-TODO: Fiks språk. page -> side
-{% endcomment %}
+{% empty %}
+    Det er ingenting her. Det var dumt.
+{% endfor %}
 
-{% if is_paginated %}
-{% if page_obj.has_previous %}
-<a href="?page={{ page_obj.previous_page_number }}">nyere</a>
+{% endblock content %}
+
+
+
+{% block sidebar %}
+
+<h3>Om Nabla</h3>
+
+<p>Nabla er linjeforeningen for sivilingeniørprogrammet <b>Fysikk og matematikk</b> på NTNU. Du kan lese mer om studiet på <a href="http://www.ntnu.no/studier/mtfyma">NTNU sine nettsider</a>. På denne nettsiden finner du informasjon om studiet, linjeforeningen, og hva som foregår.</p>
+
+{% if upcoming_events %}
+
+    <h3>Kommende arrangement</h3>
+    <div class="well" style="padding: 8px 0;"><!-- kommende arrangement -->
+        <ul class="nav nav-list">
+
+            {% for event in upcoming_events %}
+            <li>
+                <a href="{% url event_detail event.id %}">
+                    <time 
+                        class="label label-important"
+                        datetime="{{ event.event_start|date:"c" }}">{{ event.event_start|date:"j.M" }}</time> 
+                     {{ event.headline }}
+                </a>
+            </li>
+            {% endfor %}
+
+        </ul>
+    </div><!-- end kommende arrangement -->
+
 {% endif %}
 
-{% if page_obj.has_next %}
-<a href="?page={{ page_obj.next_page_number }}">eldre</a>
-{% endif %}
-{% endif %}
-
-{% endblock %}
+{% endblock sidebar %}
