--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -1,25 +1,12 @@
 {% extends "base.html" %}
-{% load mediawiki_links %}
-{% load markup %}
-{% load thumbnail %}
 
 {% block title %}Nyheter{% endblock %}
 
 {% block content %}
 
-
 {% for news in news_list %}
     <div class="row">
-        <div class="span8">
-
-            {% if news.picture %}
-                <img alt="" width="100%" src="{% thumbnail news.picture 770x250 box=news.cropping %}">
-            {% endif %}
-
-            <h2>{{ news.headline }}</h2>
-            {{ news.lead_paragraph|markdown|wikilinks}}
-            <p><a class="btn" href="{% url news_detail news.id %}">Les mer &raquo;</a></p>
-        </div>
+        {% include "content/content_homepage.html" with content=news %}
     </div>
     <hr>
 {% empty %}
