--- a/nablaweb/templates/events/event_detail.html
+++ b/nablaweb/templates/events/event_detail.html
@@ -158,7 +158,11 @@
     <tr>
         <td style="text-align: center;" colspan="2">
             {% if event.registration_required %}
-                Påmelding kreves
+                {% if is_registered %}
+                    Du er påmeldt
+                {% else %}
+                    Påmelding kreves
+                {% endif %}
             {% else %}
                 Påmelding unødvendig
             {% endif %}
@@ -168,7 +172,9 @@
     </tr>
 
     <tr><td colspan="2" style="text-align: center;">
-        <a href="{% url event_detail event.id %}" class="btn btn-primary">Meld deg på</a>
+        {% if event.registration_required and not is_registered %}
+        <a href="{% url nablaweb.events.views.register_user event.id %}" class="btn btn-primary">Meld deg på</a>
+        {% endif %}
         <a href="#notimplemented" class="btn"><span class="icon-custom icon-facebook"></span> Vis på Facebook</a>
     </td></tr>
 
@@ -182,7 +188,6 @@
 
 
 {% endif %}
-
 
 
 <div class="well" style="padding: 8px 0;">
